fix greeter
