# jasenServer/api/helloworld/v1/greeter_grpc.pb.go
@@ -23,8 +23,8 @@ const _ = grpc.SupportPackageIsVersion7
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type GreeterClient interface {
 	// Sends a greeting
-	SayHello(ctx context.Context, in *HelloRequest, opts ...grpc.CallOption) (*HelloReply, error)
-	FindById(ctx context.Context, in *IdRequest, opts ...grpc.CallOption) (*IdReply, error)
+	CreateGreeter(ctx context.Context, in *CreateRequest, opts ...grpc.CallOption) (*CreateReply, error)
+	FindById(ctx context.Context, in *FindRequest, opts ...grpc.CallOption) (*FindReply, error)
 }
 
 type greeterClient struct {
@@ -35,17 +35,17 @@ func NewGreeterClient(cc grpc.ClientConnInterface) GreeterClient {
 	return &greeterClient{cc}
 }
 
-func (c *greeterClient) SayHello(ctx context.Context, in *HelloRequest, opts ...grpc.CallOption) (*HelloReply, error) {
-	out := new(HelloReply)
-	err := c.cc.Invoke(ctx, "/helloworld.v1.Greeter/SayHello", in, out, opts...)
+func (c *greeterClient) CreateGreeter(ctx context.Context, in *CreateRequest, opts ...grpc.CallOption) (*CreateReply, error) {
+	out := new(CreateReply)
+	err := c.cc.Invoke(ctx, "/helloworld.v1.Greeter/CreateGreeter", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
 	return out, nil
 }
 
-func (c *greeterClient) FindById(ctx context.Context, in *IdRequest, opts ...grpc.CallOption) (*IdReply, error) {
-	out := new(IdReply)
+func (c *greeterClient) FindById(ctx context.Context, in *FindRequest, opts ...grpc.CallOption) (*FindReply, error) {
+	out := new(FindReply)
 	err := c.cc.Invoke(ctx, "/helloworld.v1.Greeter/FindById", in, out, opts...)
 	if err != nil {
 		return nil, err
@@ -58,8 +58,8 @@ func (c *greeterClient) FindById(ctx context.Context, in *IdRequest, opts ...grp
 // for forward compatibility
 type GreeterServer interface {
 	// Sends a greeting
-	SayHello(context.Context, *HelloRequest) (*HelloReply, error)
-	FindById(context.Context, *IdRequest) (*IdReply, error)
+	CreateGreeter(context.Context, *CreateRequest) (*CreateReply, error)
+	FindById(context.Context, *FindRequest) (*FindReply, error)
 	mustEmbedUnimplementedGreeterServer()
 }
 
@@ -67,10 +67,10 @@ type GreeterServer interface {
 type UnimplementedGreeterServer struct {
 }
 
-func (UnimplementedGreeterServer) SayHello(context.Context, *HelloRequest) (*HelloReply, error) {
-	return nil, status.Errorf(codes.Unimplemented, "method SayHello not implemented")
+func (UnimplementedGreeterServer) CreateGreeter(context.Context, *CreateRequest) (*CreateReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateGreeter not implemented")
 }
-func (UnimplementedGreeterServer) FindById(context.Context, *IdRequest) (*IdReply, error) {
+func (UnimplementedGreeterServer) FindById(context.Context, *FindRequest) (*FindReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method FindById not implemented")
 }
 func (UnimplementedGreeterServer) mustEmbedUnimplementedGreeterServer() {}
@@ -86,26 +86,26 @@ func RegisterGreeterServer(s grpc.ServiceRegistrar, srv GreeterServer) {
 	s.RegisterService(&Greeter_ServiceDesc, srv)
 }
 
-func _Greeter_SayHello_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(HelloRequest)
+func _Greeter_CreateGreeter_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
 	if interceptor == nil {
-		return srv.(GreeterServer).SayHello(ctx, in)
+		return srv.(GreeterServer).CreateGreeter(ctx, in)
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/helloworld.v1.Greeter/SayHello",
+		FullMethod: "/helloworld.v1.Greeter/CreateGreeter",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(GreeterServer).SayHello(ctx, req.(*HelloRequest))
+		return srv.(GreeterServer).CreateGreeter(ctx, req.(*CreateRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
 
 func _Greeter_FindById_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(IdRequest)
+	in := new(FindRequest)
 	if err := dec(in); err != nil {
 		return nil, err
 	}
@@ -117,7 +117,7 @@ func _Greeter_FindById_Handler(srv interface{}, ctx context.Context, dec func(in
 		FullMethod: "/helloworld.v1.Greeter/FindById",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(GreeterServer).FindById(ctx, req.(*IdRequest))
+		return srv.(GreeterServer).FindById(ctx, req.(*FindRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -130,8 +130,8 @@ var Greeter_ServiceDesc = grpc.ServiceDesc{
 	HandlerType: (*GreeterServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
-			MethodName: "SayHello",
-			Handler:    _Greeter_SayHello_Handler,
+			MethodName: "CreateGreeter",
+			Handler:    _Greeter_CreateGreeter_Handler,
 		},
 		{
 			MethodName: "FindById",
